Slightly more automated build
Change-Id: I4749d6cdda1edf57c225265136205179d59b415e

--- a/README
+++ b/README
@@ -16,7 +16,4 @@ Build Steps:
 5.  ln -s $SVMP_ROOT trunk/third_party/android_tools/aosp
 6.  cd trunk
 7.  ./build.sh
-8.  strip out/Debug/fbstream_webrtc
-9.  cp out/Debug/fbstream_webrtc $SVMP_ROOT/out/target/product/svmp/system/bin/
-10. rm $SVMP_ROOT/out/target/product/svmp/system/bin/*.[img, vdi, vmdk]
-11. Rebuild the SVMP system disk image a 2nd time so fbstream_webrtc gets included in /system/bin
+8.  Continue building the SVMP system disk image
